# cx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cx-init  cx.md
.codeseek/: files  lookup  postings
cx-skill/: SKILL.md
include/: index.h  searcher.h  simd_search.h  threadpool.h  walker.h
man/: cx.1
packaging/: .SRCINFO  PKGBUILD  cx-search-0.1.0-1-x86_64.pkg.tar.zst
packaging/pkg/cx-search/: .BUILDINFO  .MTREE  .PKGINFO
packaging/pkg/cx-search-debug/: .BUILDINFO  .MTREE  .PKGINFO
packaging/pkg/cx-search/usr/share/licenses/cx-search/: LICENSE
research/: code-review-improvements.md
src/: index.cpp  main.cpp  searcher.cpp  simd_search.cpp  threadpool.cpp  walker.cpp
